--- a/client/style/mainStyle.css
+++ b/client/style/mainStyle.css
@@ -1,263 +1,3 @@
-* {
-    font-family: 'Open Sans', sans-serif;
-}
-
-body {
-    background: #f0f0f0;
-}
-
-/* begin header vn-care */
-header.vn-care {
-    background: #fff;
-    margin-bottom: 15px;
-}
-
-header.vn-care.fix-top {
-    position: fixed;
-    top: 0;
-    z-index: 100;
-    width: 100%;
-}
-
-header.vn-care nav {
-    margin-bottom: 0;
-    border: 0;
-    background-color: inherit;
-}
-
-.navbar-brand {
-    padding: 0;
-}
-
-.navbar-brand > img, a {
-    height: 100%;
-    width: auto;
-}
-
-@media (min-width: 600px) {
-    header.vn-care nav .navbar-ex1-collapse li{
-        margin-bottom: 3px;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li:hover {
-        border-top-style: none;
-        border-right-style: none;
-        border-bottom: 3px solid #e96969;
-        border-left-style: none;
-        margin-bottom: 0;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li.active{
-        border-top-style: none;
-        border-right-style: none;
-        border-bottom: 3px solid #e96969;
-        border-left-style: none;
-        margin-bottom: 0;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li.active a{
-        background: white;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li:hover i.fa{
-        color: #e96969;
-    }
-
-    .vn-care-lg .navbar-brand {
-        height: 80px;
-    }
-
-    .vn-care-lg .nav > li > a {
-        padding-top: 30px;
-        padding-bottom: 27px;
-    }
-
-    .vn-care-lg .navbar-toggle {
-        padding: 10px;
-        margin: 25px 15px 25px 0;
-    }
-}
-/*end header vn-care*/
-
-/*begin footer vn-care*/
-footer {
-    padding: 10px;
-    background: #2e2e2e;
-    color: #aaaaaa;
-}
-
-.footer-fix {
-    width: 100%;
-    position: absolute;
-    bottom:0;
-}
-/*end footer vn-care*/
-
-/*begin panel*/
-section.vn-care.content .panel.panel-default {
-    background: white;
-    border-radius: 0;
-    border-color: #ececec;
-    /*margin-bottom: 15px;*/
-}
-
-section.vn-care.content .panel.panel-default .panel-heading {
-    background: white;
-    height: 60px;
-    padding: 17px 14px;
-
-}
-
-section.vn-care.content .panel.panel-default .panel-heading  .panel-title{
-    font-size: 2rem;
-    font-weight:600;
-    color: #444;
-}
-
-section.vn-care.content .panel.panel-default .panel-heading  .panel-title i.fa{
-    color: #e96969;
-}
-
-section.vn-care.content .panel.panel-default .panel-heading .panel-heading-button button{
-    position: relative;
-    top: -5px;
-    float: right;
-}
-
-/*end panel*/
-
-/*begin video box*/
-.video-box .description {
-    padding: 0 5px 0 5px;
-    border: 1px solid #ececec;
-    margin-bottom: 10px;
-}
-
-.video-box .description .post-status{
-    min-height:1.5em;
-}
-
-.video-box .description .post-status .pull-right {
-    color: #aaaaaa !important;
-    font-size: 11px;
-    margin: 0 4px;
-}
-
-.video-box .description a{
-    text-decoration: none;
-}
-
-.video-box .description h6 {
-    color: #444444 !important;
-    font-size: 13px;
-    font-weight: 600;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-bottom: 4px;
-}
-
-.video-box .thumb .video-status  .label-default {
-    background-color: rgba(0, 0, 0, 0.69) !important;
-}
-
-.video-box .thumb .video-status {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 0 5px 5px 5px;
-}
-
-.video-box .thumb a.play span {
-    color: white;
-    font-size: 24px;
-    position: relative;
-    top: 65px;
-}
-
-.video-box .thumb a.play {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    text-align: center;
-    text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.72);
-}
-
-.video-box .thumb img.img-responsive {
-    height: 190px;
-    width: 100%;
-}
-
-.video-box .thumb {
-    position: relative;
-    overflow: hidden;
-}
-
-
-.video-box-float-left {
-    min-height:218px;
-}
-
-.video-box-float-left .description .post-status .pull-right{
-    float: left !important;
-}
-
-.video-box .description .detail, .video-box .description .detail a {
-    color: #444444 !important;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: justify;
-}
-
-.video-box .description .detail {
-    margin-bottom: 5px;
-}
-
-@media (min-width: 768px) {
-    .video-box-float-left .thumb {
-        float: left;
-        width: 30%;
-        margin-right:10px;
-    }
-
-    .video-box-float-left .description{
-        min-height:218px;
-        border: none;
-    }
-}
-
-/*end video box*/
-
-@media (min-width: 992px) {
-    .video-view .row {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .video-view .row > [class*='col-'] {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-/* Top bar */
-.top-bar{
-    background-color: #555555;
-    padding: 6px 0 6px 0;
-    min-height: 36px;
-}
-
-.top-bar .dropdown .username {
-    color: white;
-}
-
-
 a,
 button {
     -webkit-transition: all 0.2s ease-out;
@@ -280,7 +20,7 @@ h1 {
 }
 #top {
     background: #555555;
-    padding: 2px 0;
+    padding: 10px 0;
 }
 #top .offer {
     color: #fff;
@@ -329,13 +69,13 @@ h1 {
     color: #999999;
 }
 #top #login-modal .modal-header {
-    background: #4fbfa8;
+    background: #dd8bc1;
 }
 #top #login-modal .modal-header h4 {
     color: #fff;
 }
 #top #login-modal a {
-    color: #4fbfa8;
+    color: #dd8bc1;
 }
 #top #login-modal p {
     font-weight: 300;
@@ -369,7 +109,7 @@ h1 {
     display: block;
 }
 .navbar .yamm-content ul li a:hover {
-    color: #4fbfa8;
+    color: #dd8bc1;
     text-decoration: none;
 }
 .navbar .yamm-content .banner {
@@ -381,7 +121,7 @@ h1 {
 }
 .navbar #search {
     clear: both;
-    border-top: solid 1px #9adacd;
+    border-top: solid 1px #f4daeb;
     text-align: right;
 }
 .navbar #search .navbar-form {
@@ -410,7 +150,7 @@ h1 {
 #hot h2 {
     text-transform: uppercase;
     font-size: 36px;
-    color: #4fbfa8;
+    color: #dd8bc1;
     font-weight: 100;
     text-align: center;
 }
@@ -438,7 +178,7 @@ h1 {
 }
 #hot .product-slider .owl-controls .owl-page.active span,
 #hot .product-slider .owl-controls.clickable .owl-page:hover span {
-    background: #4fbfa8;
+    background: #dd8bc1;
 }
 #advantages {
     text-align: center;
@@ -502,7 +242,7 @@ h1 {
 #main-slider .owl-controls .owl-page.active span,
 .box.slideshow .owl-controls.clickable .owl-page:hover span,
 #main-slider .owl-controls.clickable .owl-page:hover span {
-    background: #4fbfa8;
+    background: #dd8bc1;
 }
 .breadcrumb {
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
@@ -577,8 +317,8 @@ h1 {
     padding: 6px 20px 6px 20px;
     margin: 30px 10px 10px -71px;
     color: #fff;
-    background-color: #4fbfa8;
-    text-shadow: 0 1px 2px #bbb;
+    background-color: #dd8bc1;
+    text-shadow: 0px 1px 2px #bbb;
 }
 .ribbon .theribbon:before,
 .ribbon .theribbon:after {
@@ -588,11 +328,11 @@ h1 {
     height: 0;
 }
 .ribbon .theribbon:after {
-    left: 0;
+    left: 0px;
     top: 100%;
     border-width: 5px 10px;
     border-style: solid;
-    border-color: #2d7b6b #2d7b6b transparent transparent;
+    border-color: #c63c97 #c63c97 transparent transparent;
 }
 .ribbon.sale {
     top: 0;
@@ -602,7 +342,7 @@ h1 {
 }
 .ribbon.new .theribbon {
     background-color: #5bc0de;
-    text-shadow: 0 1px 2px #bbb;
+    text-shadow: 0px 1px 2px #bbb;
 }
 .ribbon.new .theribbon:after {
     border-color: #2390b0 #2390b0 transparent transparent;
@@ -612,7 +352,7 @@ h1 {
 }
 .ribbon.gift .theribbon {
     background-color: #5cb85c;
-    text-shadow: 0 1px 2px #bbb;
+    text-shadow: 0px 1px 2px #bbb;
 }
 .ribbon.gift .theribbon:after {
     border-color: #357935 #357935 transparent transparent;
@@ -681,7 +421,8 @@ h1 {
     font-weight: normal;
     text-transform: none !important;
     display: block;
-    padding: 10px 15px 10px 30px;
+    padding: 10px 15px;
+    padding-left: 30px;
     font-size: 12px;
     color: #999999;
 }
@@ -734,9 +475,9 @@ h1 {
 }
 #content .product .flip-container {
     cursor: pointer;
-    -webkit-perspective: 1000px;
-    -moz-perspective: 1000px;
-    perspective: 1000px;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    perspective: 1000;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
@@ -816,7 +557,7 @@ h1 {
 #content .product .text h3 {
     font-size: 18px;
     font-weight: 700;
-    height: 40px;
+    height: 39.6px;
     text-align: center;
     overflow: hidden;
 }
@@ -935,11 +676,11 @@ h1 {
     border: solid 2px transparent;
 }
 #content #thumbs a.active {
-    border-color: #4fbfa8;
+    border-color: #dd8bc1;
 }
 #content #checkout .nav {
     margin-bottom: 20px;
-    border-bottom: solid 1px #4fbfa8;
+    border-bottom: solid 1px #dd8bc1;
 }
 #content #checkout .nav li {
     height: 100%;
@@ -1000,6 +741,7 @@ h1 {
 }
 #content #blog-listing .post,
 #content #blog-homepage .post {
+    margin-bottom: 60px;
     background: #fff;
     margin: 0 0 30px;
     border: solid 1px #e6e6e6;
@@ -1020,7 +762,7 @@ h1 {
 #content #blog-homepage .post h2 a:hover,
 #content #blog-listing .post h4 a:hover,
 #content #blog-homepage .post h4 a:hover {
-    color: #4fbfa8;
+    color: #dd8bc1;
 }
 #content #blog-listing .post .author-category,
 #content #blog-homepage .post .author-category {
@@ -1034,7 +776,7 @@ h1 {
 }
 #content #blog-listing .post .date-comments a:hover,
 #content #blog-homepage .post .date-comments a:hover {
-    color: #4fbfa8;
+    color: #dd8bc1;
 }
 #content #blog-listing .post .intro,
 #content #blog-homepage .post .intro {
@@ -1284,7 +1026,7 @@ h1 {
 .nav .open > a:hover,
 .nav .open > a:focus {
     background-color: #eeeeee;
-    border-color: #4fbfa8;
+    border-color: #dd8bc1;
 }
 .nav-tabs {
     border-bottom: 1px solid #dddddd;
@@ -1310,7 +1052,7 @@ h1 {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
     color: #ffffff;
-    background-color: #4fbfa8;
+    background-color: #dd8bc1;
 }
 .nav-tabs-justified > li > a {
     border-radius: 4px;
@@ -1425,7 +1167,7 @@ h1 {
     }
 }
 .navbar-nav {
-    margin: 13px -15px;
+    margin: 12.5px -15px;
 }
 .navbar-nav > li > a {
     padding-top: 10px;
@@ -1462,9 +1204,12 @@ h1 {
     }
 }
 .navbar-form {
-    padding: 0 15px;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding: 0px 15px;
     border: none;
-    margin: 18px -15px;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 @media (max-width: 767px) {
     .navbar-form .form-group {
@@ -1524,7 +1269,7 @@ h1 {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
     color: #555555;
-    background-color: #4fbfa8;
+    background-color: #dd8bc1;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -1548,7 +1293,7 @@ h1 {
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #4fbfa8;
+    background-color: #dd8bc1;
     color: #555555;
 }
 @media (max-width: 767px) {
@@ -1564,7 +1309,7 @@ h1 {
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #555555;
-        background-color: #4fbfa8;
+        background-color: #dd8bc1;
     }
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -1588,15 +1333,17 @@ body {
     background-color: #f0f0f0;
 }
 a {
-    color: #4fbfa8;
+    color: #dd8bc1;
     text-decoration: none;
 }
 a:hover,
 a:focus {
-    color: #348e7b;
+    color: #cc50a1;
     text-decoration: underline;
 }
 a:focus {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
 }
 .img-rounded {
@@ -1639,8 +1386,8 @@ hr {
 }
 .btn-primary {
     color: #ffffff;
-    background-color: #4fbfa8;
-    border-color: #41b39c;
+    background-color: #dd8bc1;
+    border-color: #d777b6;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1648,8 +1395,8 @@ hr {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
     color: #ffffff;
-    background-color: #3da892;
-    border-color: #318675;
+    background-color: #d46bb0;
+    border-color: #c9489d;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -1671,11 +1418,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    background-color: #4fbfa8;
-    border-color: #41b39c;
+    background-color: #dd8bc1;
+    border-color: #d777b6;
 }
 .btn-primary .badge {
-    color: #4fbfa8;
+    color: #dd8bc1;
     background-color: #ffffff;
 }
 .btn-lg {
@@ -1753,7 +1500,7 @@ label {
     padding: 6px 12px;
     line-height: 1.42857143;
     text-decoration: none;
-    color: #4fbfa8;
+    color: #dd8bc1;
     background-color: #ffffff;
     border: 1px solid #dddddd;
 }
@@ -1761,7 +1508,7 @@ label {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-    color: #348e7b;
+    color: #cc50a1;
     background-color: #eeeeee;
     border-color: #dddddd;
 }
@@ -1773,8 +1520,8 @@ label {
 .pagination > .active > span:focus {
     z-index: 2;
     color: #ffffff;
-    background-color: #4fbfa8;
-    border-color: #4fbfa8;
+    background-color: #dd8bc1;
+    border-color: #dd8bc1;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -1858,17 +1605,17 @@ ol {
     font-style: italic;
 }
 .text-primary {
-    color: #4fbfa8;
+    color: #dd8bc1;
 }
 a.text-primary:hover {
-    color: #3aa18c;
+    color: #d164ac;
 }
 .bg-primary {
     color: #fff;
-    background-color: #4fbfa8;
+    background-color: #dd8bc1;
 }
 a.bg-primary:hover {
-    background-color: #3aa18c;
+    background-color: #d164ac;
 }
 abbr[title],
 abbr[data-original-title] {
@@ -1878,7 +1625,7 @@ blockquote {
     padding: 10px 20px;
     margin: 0 0 20px;
     font-size: 14px;
-    border-left: 5px solid #4fbfa8;
+    border-left: 5px solid #dd8bc1;
 }
 blockquote footer,
 blockquote small,
@@ -1895,25 +1642,25 @@ blockquote .small:before {
 }
 .blockquote-reverse,
 blockquote.pull-right {
-    border-right: 5px solid #4fbfa8;
+    border-right: 5px solid #dd8bc1;
 }
 address {
     margin-bottom: 20px;
     line-height: 1.42857143;
 }
 .panel-primary {
-    border-color: #4fbfa8;
+    border-color: #dd8bc1;
 }
 .panel-primary > .panel-heading {
     color: #ffffff;
-    background-color: #4fbfa8;
-    border-color: #4fbfa8;
+    background-color: #dd8bc1;
+    border-color: #dd8bc1;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-    border-top-color: #4fbfa8;
+    border-top-color: #dd8bc1;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-    border-bottom-color: #4fbfa8;
+    border-bottom-color: #dd8bc1;
 }
 .panel-primary .panel-title {
     font-weight: 300;
