--- a/client/ui/layouts/partials/Footer.html
+++ b/client/ui/layouts/partials/Footer.html
@@ -1,11 +1,133 @@
 <template name="Footer">
-    <footer>
+    <footer style="padding: 0">
+        <div id="footer" data-animate="fadeInUp">
         <div class="container">
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 text-center" style="padding-top: 10px;">
-                    <p> Experimental hihi</p>
+                <div class="col-md-3 col-sm-6">
+                    <h4>Pages</h4>
+
+                    <ul>
+                        <li><a href="#">About us</a>
+                        </li>
+                        <li><a href="#">Terms and conditions</a>
+                        </li>
+                        <li><a href="#">FAQ</a>
+                        </li>
+                        <li><a href="#">Contact us</a>
+                        </li>
+                    </ul>
+
+                    <hr>
+
+                    <h4>User section</h4>
+
+                    <ul>
+                        <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
+                        </li>
+                        <li><a href="#">Regiter</a>
+                        </li>
+                    </ul>
+
+                    <hr class="hidden-md hidden-lg hidden-sm">
+
                 </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-md-3 col-sm-6">
+
+                    <h4>Top categories</h4>
+
+                    <h5>Men</h5>
+
+                    <ul>
+                        <li><a href="#">T-shirts</a>
+                        </li>
+                        <li><a href="#">Shirts</a>
+                        </li>
+                        <li><a href="#">Accessories</a>
+                        </li>
+                    </ul>
+
+                    <h5>Ladies</h5>
+                    <ul>
+                        <li><a href="#">T-shirts</a>
+                        </li>
+                        <li><a href="#">Skirts</a>
+                        </li>
+                        <li><a href="#">Pants</a>
+                        </li>
+                        <li><a href="#">Accessories</a>
+                        </li>
+                    </ul>
+
+                    <hr class="hidden-md hidden-lg">
+
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-md-3 col-sm-6">
+
+                    <h4>Where to find us</h4>
+
+                    <p><strong>Group 09</strong>
+                        <br>227 Nguyen Van Cu Street
+                        <br>District 5
+                        <br>Ho Chi Minh City
+                        <br>Viet Nam
+                        <br>
+                    </p>
+
+                    <a href="#">Go to contact page</a>
+
+                    <hr class="hidden-md hidden-lg">
+
+                </div>
+                <!-- /.col-md-3 -->
+
+
+
+                <div class="col-md-3 col-sm-6">
+
+                    <h4>Get the news</h4>
+
+                    <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
+                    <form>
+                        <div class="input-group">
+
+                            <input type="text" class="form-control">
+
+                            <span class="input-group-btn">
+
+			    <button class="btn btn-default" type="button">Subscribe!</button>
+
+			</span>
+
+                        </div>
+                        <!-- /input-group -->
+                    </form>
+
+                    <hr>
+
+                    <h4>Stay in touch</h4>
+
+                    <p class="social">
+                        <a href="#" class="facebook external" data-animate-hover="shake"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="twitter external" data-animate-hover="shake"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="instagram external" data-animate-hover="shake"><i class="fa fa-instagram"></i></a>
+                        <a href="#" class="gplus external" data-animate-hover="shake"><i class="fa fa-google-plus"></i></a>
+                        <a href="#" class="email external" data-animate-hover="shake"><i class="fa fa-envelope"></i></a>
+                    </p>
+
+
+                </div>
+                <!-- /.col-md-3 -->
+
             </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /.container -->
         </div>
     </footer>
 </template>
