--- a/client/ui/layouts/partials/Header.html
+++ b/client/ui/layouts/partials/Header.html
@@ -199,7 +199,7 @@
                                                     </li>
                                                     <li><a href="category-full.html">Category - full width</a>
                                                     </li>
-                                                    <li><a href="detail.html">Product detail</a>
+                                                    <li><a href={{pathFor 'Detail'}}>Product detail</a>
                                                     </li>
                                                 </ul>
                                             </div>
